# AoC2023

./: .gitignore  CMakeLists.txt  README.md
src/cpp/: main.cpp
src/cpp/days/: day01.hpp  day02.hpp  day03.hpp  day04.hpp  day05.hpp
